# sample-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo.html  pyproject.toml  requirements-dev.txt  requirements.txt  sample.txt
.github/workflows/: ci.yml
src/textprocessor/: __init__.py  analyzer.py  cli.py  config.py  py.typed  transformer.py  utils.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_transformer.py
tests/fixtures/: sample.txt
